tests/fail/invalid_ascii_escape_in_string_literal.tig
let
    var s := "This is an invalid character: \999"
in
end
